Project build/test updates; pre-1.0.0 version